videos section fixed

--- a/index.html
+++ b/index.html
@@ -271,29 +271,32 @@
 <!-- END LINE BREAK -->
 
 		<!-- BOXED CONTENT -->
+
 		<section>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
 						<div class="boxed-content">
-<embed src="Observer_eng.swf" style="width: 560px; height: 315px"alt="All Terrain">
+<embed src="Observer_eng.swf" style="width: 350px; height: 315px"alt="Flash file of wheelchair going up stairs">
 							<!-- <i class="fa fa-wheelchair-alt"></i> -->
-							<h2 class="boxed-content-title">All TERRAIN</h2>
-							<p>Observer Wheelchairs work on terrain which traditional wheelchairs simply can't.</p>
+							<h2 class="boxed-content-title">.CHECK OUT OUR FLASH VIDEO</h2>
+							<p>CHECK OUT OUR FLASH VIDEO</p>
 						</div>
 					</div>
+
 					<div class="col-md-6">
 						<div class="boxed-content">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rL07V_I7dko" frameborder="0" allowfullscreen></iframe>
+<iframe width="350" height="315" src="https://www.youtube.com/embed/rL07V_I7dko" frameborder="0" allowfullscreen></iframe>
 
 							<!-- <i class="fa fa-compass"></i> -->
-							<h2 class="boxed-content-title">SEAT BALANCING TECHNOLOGY</h2>
-							<p>When driving up and down stairs or hills, Observer Mobility Wheelchairs keep your seat and body in an upright position - as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe on whatever road you wish to travel. </p>
+							<h2 class="boxed-content-title">CHECK OUT OUR YOUTUBE VIDEO</h2>
+							<p>CHECK OUT OUR YOUTUBE VIDEO</p>
 						</div> 
 					</div>
 				</div>
 			</div>
 		</section>
+
 		<!-- END BOXED CONTENT -->
 
 
