--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<!-- CAROUSEL -->
 		<section class="recent-works slick-carousel">
 			<div class="container">
-				<h2 class="section-heading">NOT FEATURED PRODUCTS</h2>
+				<h2 class="section-heading">CHECK OUT OUR PRODUCTS</h2>
 				<div class="portfolio-container">
 					<div class="portfolio-item">
 						<div class="overlay"></div>
@@ -278,7 +278,6 @@
 					<div class="col-md-6">
 						<div class="boxed-content">
 <embed src="Observer_eng.swf" style="width: 350px; height: 315px"alt="Flash file of wheelchair going up stairs">
-							<!-- <i class="fa fa-wheelchair-alt"></i> -->
 							<h2 class="boxed-content-title">.CHECK OUT OUR FLASH VIDEO</h2>
 							<p>CHECK OUT OUR FLASH VIDEO</p>
 						</div>
@@ -309,7 +308,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (1800) 765 - 4321 or</span>&nbsp;&nbsp;<a href="contactus.html" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (800)715-3513 or</span>&nbsp;&nbsp;<a href="contactUs.html" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
@@ -359,9 +358,6 @@
 					</div>
 					<div class="col-md-4">
 						<!-- COLUMN 3 -->
-						<div class="newsletter">
-							<h3 class="footer-heading">NEWSLETTER</h3>
-							<p>Get the latest Observer Mobility update by subscribing to our newsletter.</p>
 							<form class="newsletter-form" method="POST">
 								<div class="input-group input-group-lg">
 									<input type="email" class="form-control" name="email" placeholder="youremail@domain.com">
