--- a/4x4ElectricWheelchairs.html
+++ b/4x4ElectricWheelchairs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Observer Mobility: 4x4 Electric Wheelchairs</title>
+	<title>Observer Mobility | 4x4 Motorized Devices</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Observer Mobility: 4x4 Electric Wheelchairs">
@@ -95,16 +95,25 @@
 		</nav>
 		<!-- END NAVBAR -->
 		<!-- BREADCRUMBS -->
-		<div class="page-header">
+		<div class="page-header" style="margin-top: 35px;">
 			<div class="container">
 				<h1 class="page-title pull-left">PRODUCTS</h1>
 				<ol class="breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li class="active">4x4 Electric Wheelchairs</li>
+					<li class="active">4x4 Motorized Vehicles</li>
 				</ol>
 			</div>
 		</div>
 		<!-- END BREADCRUMBS -->
+<!-- BEGIN LINE BREAK -->
+	<div class="container">
+		<div class="row">
+			<div class="nav-line-1">
+				<hr>
+			</div>
+		</div>
+	</div>
+<!-- END LINE BREAK -->
 		<!-- PAGE CONTENT -->
 		<div class="page-content">
 			<div class="container">
@@ -179,20 +188,6 @@
 
 					</ul>
 				</div>
-				<!-- END PORTFOLIO ITEM WRAPPER -->
-				<!-- PAGINATION -->
-<!-- 				<div class="text-center">
-					<ul class="pagination">
-						<li><a href="#"><i class="fa fa-angle-left"></i><span class="sr-only">Previous</span></a></li>
-						<li><a href="#">1</a></li>
-						<li class="active"><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#"><i class="fa fa-angle-right"></i><span class="sr-only">Next</span></a></li>
-					</ul>
-				</div> -->
-				<!-- END PAGINATION -->
 			</div>
 		</div>
 		<!-- END PAGE CONTENT -->
