--- a/index.html
+++ b/index.html
@@ -106,61 +106,37 @@
 			<div id="carousel-hero" class="slick-carousel">
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="assets/img/201.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<img src="assets/img/P1050072.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">CLEAN &amp; ELEGANT DESIGN</h2>
-							<p class="lead">Giving valuable reputation and credibility to your business</p>
+							<h2 class="hero-heading" style="color: #4aaf56;">CRAFTED WITH LOVE</h2>
+							<p class="lead" style="color: white;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/202.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<img src="assets/img/7.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<h2 class="hero-heading" style="color: #000000">ENGINEERED TO IMPRESS</h2>
+							<p class="lead">The Observer is more than just a wheelchair – it's a stunning piece of design and engineering that you'd be proud to ride around.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
-					<div class="item">
-						<img src="assets/img/203.jpg" class="img-responsive" alt="Slider Image">
+<!-- 					<div class="item">
+						<img src="assets/img/psb-11.jpg" class="img-responsive" alt="Slider Image">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
+							<h2 class="hero-heading">QUALITY COMPONENTS</h2>
 							<p class="lead">Readable code, well documented and FREE support</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/204.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<img src="assets/img/wp.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
 							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/205.jpg" class="img-responsive" alt="Slider Image">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
-							<p class="lead">Readable code, well documented and FREE support</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/206.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/203.jpg" class="img-responsive" alt="Slider Image">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
-							<p class="lead">Readable code, well documented and FREE support</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
