new background images added to the homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Observer Mobility Homepage">
-	<meta name="author" content="www.EveryDayKenneth.com">
+	<meta name="author" content="www.observermobility.com">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -57,7 +57,7 @@
 						<li class="dropdown ">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">PRODUCTS  <span class="label label-danger label-main-nav">NEW</span> <i class="fa fa-angle-down"></i></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="4x4ElectricWheelchairs.html">4X4 Electric Wheelchairs</a></li>
+								<li><a href="4x4ElectricWheelchairs.html">4WD Power Chairs</a></li>
 								<li class="dropdown ">
 									<a href="accessories.html">Accessories <span class="label label-danger label-main-nav">NEW</span></a>
 								</li>
@@ -109,20 +109,20 @@
 						<img src="assets/img/P1050072.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading" style="color: #4aaf56;">CRAFTED WITH LOVE</h2>
-							<p class="lead" style="color: white;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p>
+							<p class="lead" style="color: #4aaf56;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/7.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<img src="assets/img/501.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading" style="color: #000000">ENGINEERED TO IMPRESS</h2>
 							<p class="lead">The Observer is more than just a wheelchair – it's a stunning piece of design and engineering that you'd be proud to ride around.</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
-<!-- 					<div class="item">
-						<img src="assets/img/psb-11.jpg" class="img-responsive" alt="Slider Image">
+					<div class="item">
+						<img src="assets/img/501.jpg" class="img-responsive" alt="Slider Image">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">QUALITY COMPONENTS</h2>
 							<p class="lead">Readable code, well documented and FREE support</p>
@@ -130,13 +130,45 @@
 						</div>
 					</div>
 					<div class="item">
-						<img src="assets/img/wp.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<img src="assets/img/502.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
 							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
-					</div> -->
+					</div>
+					<div class="item">
+						<img src="assets/img/503.jpg" class="img-responsive" alt="Slider Image">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">QUALITY COMPONENTS</h2>
+							<p class="lead">Readable code, well documented and FREE support</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/505.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
+							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/506.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
+							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/507.jpg" class="img-responsive" alt="1200x400 Background Images">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
+							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -284,7 +316,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (800)715-3513 or</span>&nbsp;&nbsp;<a href="contactUs.html" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (888)715-3513 or</span>&nbsp;&nbsp;<a href="contactUs.html" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
@@ -317,7 +349,7 @@
 								<ul class="list-unstyled footer-nav">
 									<li><a href="index.html">Home</a></li>
 									<li><a href="aboutus.html">About</a></li>
-									<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
+									<li><a href="4x4ElectricWheelchairs.html">4WD Power Chairs</a></li>
 									<li><a href="accessories.html">Accessories</a></li>
 									<li><a href="videos.html">Videos</a></li>
 								</ul>
