--- a/index.html
+++ b/index.html
@@ -108,64 +108,24 @@
 					<div class="item active">
 						<img src="assets/img/P1050072.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
-							<h2 class="hero-heading" style="color: #4aaf56;">CRAFTED WITH LOVE</h2>
+							<h2 class="hero-heading" style="color: white;">CRAFTED WITH LOVE</h2>
 							<p class="lead" style="color: #4aaf56;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/501.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading" style="color: #000000">ENGINEERED TO IMPRESS</h2>
-							<p class="lead">The Observer is more than just a wheelchair – it's a stunning piece of design and engineering that you'd be proud to ride around.</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/501.jpg" class="img-responsive" alt="Slider Image">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">QUALITY COMPONENTS</h2>
-							<p class="lead">Readable code, well documented and FREE support</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/502.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/503.jpg" class="img-responsive" alt="Slider Image">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">QUALITY COMPONENTS</h2>
-							<p class="lead">Readable code, well documented and FREE support</p>
-							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/505.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
 						<img src="assets/img/506.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<h2 class="hero-heading" style="color: black;">ENGINEERED TO IMPRESS</h2>
+							<p class="lead" style="color: black;">The Observer is more than just a wheelchair – it's a stunning piece of design and engineering that you'd be proud to ride around</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
 					<div class="item">
 						<img src="assets/img/507.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
-							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
-							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<h2 class="hero-heading" style="color: black;">QUALITY COMPONENTS</h2>
+							<p class="lead" style="color: #4aaf56;">We used only the finest materials and components to build the Fulton Cycle</p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
