--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<img src="assets/img/507.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
 							<h2 class="hero-heading" style="color: black;">QUALITY COMPONENTS</h2>
-							<p class="lead" style="color: #4aaf56;">We used only the finest materials and components to build the Fulton Cycle</p>
+							<p class="lead" style="color: #4aaf56;">We used only the finest materials and components to build all Observer 4WD Power Chairs </p>
 							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
 						</div>
 					</div>
@@ -145,13 +145,13 @@
 		<!-- CAROUSEL -->
 		<section class="recent-works slick-carousel">
 			<div class="container">
-				<h2 class="section-heading">CHECK OUT OUR PRODUCTS</h2>
+				<h2 class="section-heading">OBSERVER POWER CHAIRS</h2>
 				<div class="portfolio-container">
 					<div class="portfolio-item">
 						<div class="overlay"></div>
 						<div class="info">
 							<h4 class="title">MAXIMUS</h4>
-							<p class="brief-description">OB-EW-001</p>
+							<p class="brief-description"></p>
 							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
 						</div>
 						<div class="media-wrapper">
@@ -162,7 +162,7 @@
 						<div class="overlay"></div>
 						<div class="info">
 							<h4 class="title">OFF ROAD</h4>
-							<p class="brief-description">OB-EW-002</p>
+							<p class="brief-description"></p>
 							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
 						</div>
 						<div class="media-wrapper">
@@ -173,7 +173,7 @@
 						<div class="overlay"></div>
 						<div class="info">
 							<h4 class="title">OPTIMUS</h4>
-							<p class="brief-description">OB-EW-003</p>
+							<p class="brief-description"></p>
 							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
 						</div>
 						<div class="media-wrapper">
@@ -204,7 +204,7 @@
 <img src="assets/img/101.jpg" class="inline-img" alt="Who We Are">
 							<!-- <i class="fa fa-wheelchair-alt"></i> -->
 							<h2 class="boxed-content-title">All TERRAIN</h2>
-							<p>Observer Wheelchairs work on terrain which traditional wheelchairs simply can't.</p>
+							<p>Observer Power Chairs work on terrain which traditional Power Chairs simply can't.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -212,7 +212,7 @@
 <img src="assets/img/102.jpg" class="inline-img" alt="Image set to 520x340">
 							<!-- <i class="fa fa-compass"></i> -->
 							<h2 class="boxed-content-title">SEAT BALANCING TECHNOLOGY</h2>
-							<p>When driving up and down stairs or hills, Observer Mobility Wheelchairs keep your seat and body in an upright position - as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe on whatever road you wish to travel. </p>
+							<p>When driving up and down stairs or hills, Observer Mobility Power Chairs keep your seat and body in an upright position - as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe on whatever road you wish to travel. </p>
 						</div> 
 					</div>
 					<div class="col-md-4">
@@ -220,7 +220,7 @@
 <img src="assets/img/103.jpg" class="inline-img" alt="Who We Are">
 							<!-- <i class="fa fa-universal-access"></i> -->
 							<h2 class="boxed-content-title">ALL WHEEL DRIVE</h2>
-							<p>Observer Mobility's All Wheel Drive Wheelchairs and specialized tires allow you to get to those places that once seemed difficult. </p>
+							<p>Observer Mobility's All Wheel Drive Power Chairs and specialized tires allow you to get to those places that once seemed difficult. </p>
 						</div>
 					</div>
 				</div>
@@ -289,7 +289,7 @@
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
 						<img src="assets/img/logo/black.png" class="logo" alt="Repute">
-						<p>The Observer wants to prove that there are no inaccessible places. You will be convinced that this is the electric wheelchair for you.</p>
+						<p>The Observer wants to prove that there are no inaccessible places. You will be convinced that this is the electric Power Chair for you.</p>
 						<br>
 						<address class="margin-bottom-30px">
 							<ul class="list-unstyled">
