media headline added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						<div class="overlay"></div>
 						<div class="info">
 							<h4 class="title">MAXIMUS</h4>
-							<p class="brief-description"></p>
+							<p class="brief-description">...</p>
 							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
 						</div>
 						<div class="media-wrapper">
@@ -162,7 +162,7 @@
 						<div class="overlay"></div>
 						<div class="info">
 							<h4 class="title">OFF ROAD</h4>
-							<p class="brief-description"></p>
+							<p class="brief-description">...</p>
 							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
 						</div>
 						<div class="media-wrapper">
@@ -173,7 +173,7 @@
 						<div class="overlay"></div>
 						<div class="info">
 							<h4 class="title">OPTIMUS</h4>
-							<p class="brief-description"></p>
+							<p class="brief-description">...</p>
 							<a href="4X4ElectricWheelchairs.html" class="btn">learn more</a>
 						</div>
 						<div class="media-wrapper">
@@ -204,7 +204,7 @@
 <img src="assets/img/101.jpg" class="inline-img" alt="Who We Are">
 							<!-- <i class="fa fa-wheelchair-alt"></i> -->
 							<h2 class="boxed-content-title">All TERRAIN</h2>
-							<p>Observer Power Chairs work on terrain which traditional Power Chairs simply can't.</p>
+							<p>Observer Power Chairs work on terrain which traditional Power Chairs simply can't. Observer Power Chairs are engineered to handle more than just pavement.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
@@ -212,7 +212,7 @@
 <img src="assets/img/102.jpg" class="inline-img" alt="Image set to 520x340">
 							<!-- <i class="fa fa-compass"></i> -->
 							<h2 class="boxed-content-title">SEAT BALANCING TECHNOLOGY</h2>
-							<p>When driving up and down stairs or hills, Observer Mobility Power Chairs keep your seat and body in an upright position - as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe on whatever road you wish to travel. </p>
+							<p>When driving up and down stairs or hills, Observer Mobility Power Chairs keep your seat and body in an upright position as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe where most traditional Power Chairs simply can't go.</p>
 						</div> 
 					</div>
 					<div class="col-md-4">
@@ -220,7 +220,7 @@
 <img src="assets/img/103.jpg" class="inline-img" alt="Who We Are">
 							<!-- <i class="fa fa-universal-access"></i> -->
 							<h2 class="boxed-content-title">ALL WHEEL DRIVE</h2>
-							<p>Observer Mobility's All Wheel Drive Power Chairs and specialized tires allow you to get to those places that once seemed difficult. </p>
+							<p>Observer Mobility's Power Chairs work on terrain which traditional Power Chairs simply can't. Observer Power Chairs are engineered to handle more than just the pavement. </p>
 						</div>
 					</div>
 				</div>
@@ -242,11 +242,12 @@
 
 		<section>
 			<div class="container">
+<h2 class="section-heading">OBSERVER MOBILITY MEDIA</h2>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="boxed-content">
 <embed src="Observer_eng.swf" style="width: 350px; height: 315px"alt="Flash file of wheelchair going up stairs">
-							<h2 class="boxed-content-title">.CHECK OUT OUR FLASH VIDEO</h2>
+							<h2 class="boxed-content-title">CHECK OUT OUR FLASH VIDEO</h2>
 							<p>CHECK OUT OUR FLASH VIDEO</p>
 						</div>
 					</div>
