under construction page added

--- a/underconstruction.html
+++ b/underconstruction.html
@@ -101,171 +101,11 @@
 <div class="row">
 <div class="col-md-12">
 
-		<!-- HERO UNIT -->
-		<section class="hero-unit-slider slider-responsive">
-			<div id="carousel-hero" class="slick-carousel">
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<img src="assets/img/P1050072.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading" style="color: #4aaf56;">CRAFTED WITH LOVE</h2>
-							<p class="lead" style="color: white; font-weight: bold;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p>
-							<a href="underconstruction.html" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/506.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading" style="color: #4aaf56;">ENGINEERED TO IMPRESS</h2>
-							<p class="lead" style="color: black; font-weight: bold;">The Observer is more than just a wheelchair – it's a stunning piece of design and engineering that you'd be proud to ride around</p>
-							<a href="underconstruction.html" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-					<div class="item">
-						<img src="assets/img/507.jpg" class="img-responsive" alt="1200x400 Background Images">
-						<div class="carousel-caption">
-							<h2 class="hero-heading" style="color: black;">QUALITY COMPONENTS</h2>
-							<p class="lead" style="color: #4aaf56; font-weight: bold;">We used only the finest materials and components to build all Observer 4WD Power Chairs </p>
-							<a href="underconstruction.html" class="btn btn-lg hero-button">LEARN MORE</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END HERO UNIT -->
-
-<!-- BEGIN LINE BREAK -->
-		<hr></hr>
-<!-- END LINE BREAK -->
+<h2 class="underconstruction"> We are currently working on something right now, but please contact us at info@observermobility.com regarding any inquiries</h2>
 
 </div>
-</div>	
-</div>	
-
-		<!-- CAROUSEL -->
-		<section class="recent-works slick-carousel">
-			<div class="container">
-				<h2 class="section-heading">CHECK OUT OUR PRODUCTS</h2>
-				<div class="portfolio-container">
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">OBSERVER MOBILITY PRODUCTS</h4>
-							<p class="brief-description">...</p>
-							<a href="underconstruction.html" class="btn">learn more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/300-020-red.jpg" alt="First Not Featured Product" />
-						</div>
-					</div>
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">OBSERVER MOBILITY PRODUCTS</h4>
-							<p class="brief-description">...</p>
-							<a href="underconstruction.html" class="btn">learn more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/300-030-red.jpg" alt="Item Thumbnail" />
-						</div>
-					</div>
-					<div class="portfolio-item">
-						<div class="overlay"></div>
-						<div class="info">
-							<h4 class="title">OBSERVER MOBILITY PRODUCTS</h4>
-							<p class="brief-description">...</p>
-							<a href="underconstruction.html" class="btn">learn more</a>
-						</div>
-						<div class="media-wrapper">
-							<img src="assets/img/300-003-1-blue.jpg" alt="Item Thumbnail" />
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END CAROUSEL -->
-
-<!-- BEGIN LINE BREAK -->
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<hr>
-			</div>
-		</div>
-	</div>
-<!-- END LINE BREAK -->
-
-		<!-- BOXED CONTENT -->
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="boxed-content">
-<img src="assets/img/101.jpg" class="inline-img" alt="Who We Are">
-							<!-- <i class="fa fa-wheelchair-alt"></i> -->
-							<h2 class="boxed-content-title">All TERRAIN</h2>
-							<p>Observer Power Chairs work on terrain which traditional Power Chairs simply can't. Observer Power Chairs are engineered to handle more than just pavement.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="boxed-content">
-<img src="assets/img/promotour2.jpg" class="inline-img" alt="Image set to 520x340">
-							<!-- <i class="fa fa-compass"></i> -->
-							<h2 class="boxed-content-title">SEAT BALANCING TECHNOLOGY</h2>
-							<p>When driving up and down stairs or hills, Observer Mobility Power Chairs keep your seat and body in an upright position as if driving along a flat surface. Observer Mobility makes driving more comfortable and safe where most traditional Power Chairs simply can't go.</p>
-						</div> 
-					</div>
-					<div class="col-md-4">
-						<div class="boxed-content">
-<img src="assets/img/103.jpg" class="inline-img" alt="Who We Are">
-							<!-- <i class="fa fa-universal-access"></i> -->
-							<h2 class="boxed-content-title">4 WHEEL DRIVE</h2>
-							<p>Observer Mobility's Power Chairs work on terrain which traditional Power Chairs simply can't. Observer Power Chairs are engineered to handle more than just the pavement. </p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END BOXED CONTENT -->
-
-<!-- BEGIN LINE BREAK -->
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<hr>
-			</div>
-		</div>
-	</div>
-<!-- END LINE BREAK -->
-
-		<!-- BOXED CONTENT -->
-
-		<section>
-			<div class="container">
-<h2 class="section-heading">OBSERVER MOBILITY MEDIA</h2>
-				<div class="row">
-					<div class="col-md-6">
-						<div class="boxed-content">
-<embed src="Observer_eng.swf" style="width: 350px; height: 315px"alt="Flash file of wheelchair going up stairs">
-							<!-- <h2 class="boxed-content-title">OBSERVER MOBILITY FLASH VIDEO</h2> -->
-							<p>OBSERVER MOBILITY FLASH</p>
-						</div>
-					</div>
-
-					<div class="col-md-6">
-						<div class="boxed-content">
-<iframe width="350" height="315" src="https://www.youtube.com/embed/rL07V_I7dko" frameborder="0" allowfullscreen></iframe>
-
-							<!-- <i class="fa fa-compass"></i> -->
-							<!-- <h2 class="boxed-content-title">OBSERVER MOBILITY YOUTUBE VIDEO</h2> -->
-							<p>OBSERVER MOBILITY YOUTUBE VIDEO</p>
-						</div> 
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- END BOXED CONTENT -->
+</div>
+</div>
 
 
 
