--- a/underconstruction.html
+++ b/underconstruction.html
@@ -117,7 +117,7 @@
 					<h2 class="section-heading">GET IN TOUCH</h2>
 				</div>
 				<div class="pull-right">
-					<span>Call us at (888)715-3513 or</span>&nbsp;&nbsp;<a href="contactUs.html" class="btn btn-lg btn-primary">CONTACT US</a>
+					<span>Call us at (888)715-3513 or</span>&nbsp;&nbsp;<a href="underconstruction.html" class="btn btn-lg btn-primary">CONTACT US</a>
 				</div>
 			</div>
 		</section>
