products pagetemplate base started

--- a/4x4ElectricWheelchairs.html
+++ b/4x4ElectricWheelchairs.html
@@ -118,16 +118,16 @@
 		<div class="page-content">
 			<div class="container">
 				<!-- ITEM FILTERS -->
-				<ul class="list-inline portfolio-item-filters">
+<!-- 				<ul class="list-inline portfolio-item-filters">
 					<li><a class="active" href="#" data-filter="*">ALL</a></li>
 					<li><a href="#" data-filter=".design">MAXIMUS</a></li>
 					<li><a href="#" data-filter=".photography">OFF ROAD</a></li>
 					<li><a href="#" data-filter=".ui">OPTIMUS</a></li>
 					<li><a href="#" data-filter=".ux">R-SERIES</a></li>
-				</ul>
+				</ul> -->
 				<!-- END ITEM FILTERS -->
 				<!-- PORTFOLIO ITEM WRAPPER -->
-				<div class="portfolio-item-wrapper">
+<!-- 				<div class="portfolio-item-wrapper">
 					<ul class="portfolio-item-list portfolio-isotope portfolio-nospace list-col-4">
 						<li class="portfolio-item design">
 							<div class="overlay"></div>
@@ -189,7 +189,7 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<!-- END PAGE CONTENT -->
 		<!-- FOOTER -->
 		<footer>
