Add-on and Options Complete

--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -15,6 +15,9 @@
     <link href="assets/css/skins/slategray.css" rel="stylesheet" type="text/css"> <!-- your skin -->
 	
 	<link href="assets/css/portfolio-item.css" rel="stylesheet">
+	<link href="assets/css/addons.css" rel="stylesheet">
+
+
 	<!-- IE 9 Fallback-->
 	<!--[if IE 9]>
 		<link href="assets/css/ie.css" rel="stylesheet">
@@ -136,6 +139,46 @@
         <!-- /.row -->
 
         <!-- Related Projects Row -->
+<div class="addons"> 
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h3 class="page-header">Add-on &amp; Options</h3>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+<h5>Seat Cover Colors</h5>
+<div class="foo blue"></div>
+<div class="foo purple"></div>
+<div class="foo wine"></div>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+<h5>Power Chair Colors</h5>            	
+<div class="foo blue"></div>
+<div class="foo purple"></div>
+<div class="foo wine"></div>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+<h5>Lithium or Lead Acid Batteries</h5>   
+<div class="foo blue"></div>
+<div class="foo purple"></div>
+<div class="foo wine"></div>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+<div class="foo blue"></div>
+<div class="foo purple"></div>
+<div class="foo wine"></div>
+            </div>
+
+        </div>
+</div>
+        <!-- /.row -->
+
+
+        <!-- Related Projects Row -->
         <div class="row">
 
             <div class="col-lg-12">
@@ -170,17 +213,9 @@
         <!-- /.row -->
 
 		<!-- END HERO UNIT -->
-
-
-
 </div>
 </div>	
 </div>	
-
-
-
-
-
 
 
 <!-- BEGIN LINE BREAK -->
@@ -192,6 +227,7 @@
 		</div>
 	</div>
 <!-- END LINE BREAK -->
+
 
 		<!-- BOXED CONTENT -->
 
