--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -17,6 +17,9 @@
 	<link href="assets/css/portfolio-item.css" rel="stylesheet">
 	<link href="assets/css/addons.css" rel="stylesheet">
 
+	<link rel="stylesheet" href="assets/css/tablesaw.css">
+
+
 
 	<!-- IE 9 Fallback-->
 	<!--[if IE 9]>
@@ -124,6 +127,133 @@
             </div>
 
             <div class="col-md-4">
+<!-- Begin Specs Section -->
+
+<div class="specArea">
+
+<table class="fixed_headers">
+<!--   <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+    </tr>
+  </thead> -->
+  <tbody>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Pear</td>
+<!--       <td>Green</td> -->
+      <td>These are green.</td>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Apple</td>
+      <td>These are red.</td>
+    </tr>
+<!--     <tr>
+      <td>Grape</td>
+      <td>Purple / Green</td>
+      <td>These are purple and green.</td>
+    </tr>
+    <tr>
+      <td>Orange</td>
+      <td>Orange</td>
+      <td>These are orange.</td>
+    </tr>
+    <tr>
+      <td>Banana</td>
+      <td>Yellow</td>
+      <td>These are yellow.</td>
+    </tr>
+    <tr>
+      <td>Kiwi</td>
+      <td>Green</td>
+      <td>These are green.</td>
+    </tr>
+    <tr>
+      <td>Plum</td>
+      <td>Purple</td>
+      <td>These are Purple</td>
+    </tr>
+    <tr>
+      <td>Watermelon</td>
+      <td>Red</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Tomato</td>
+      <td>Red</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Cherry</td>
+      <td>Red</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Cantelope</td>
+      <td>Orange</td>
+      <td>These are orange inside.</td>
+    </tr>
+    <tr>
+      <td>Honeydew</td>
+      <td>Green</td>
+      <td>These are green inside.</td>
+    </tr>
+    <tr>
+      <td>Papaya</td>
+      <td>Green</td>
+      <td>These are green.</td>
+    </tr>
+    <tr>
+      <td>Raspberry</td>
+      <td>Red</td>
+      <td>These are red.</td>
+    </tr>
+    <tr>
+      <td>Blueberry</td>
+      <td>Blue</td>
+      <td>These are blue.</td>
+    </tr>
+    <tr>
+      <td>Mango</td>
+      <td>Orange</td>
+      <td>These are orange.</td>
+    </tr>
+    <tr>
+      <td>Passion Fruit</td>
+      <td>Green</td>
+      <td>These are green.</td>
+    </tr> -->
+  </tbody>
+</table>
+
+</div>
+
+<!-- End Specs Section -->
+
                 <h3>Observer Maximus Description</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
                 <h3>Observer Maximus Dimensions/Stats</h3>
@@ -168,6 +298,7 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
+<h5>Ohio State Buckeyes Colors</h5>               	
 <div class="foo blue"></div>
 <div class="foo purple"></div>
 <div class="foo wine"></div>
@@ -281,15 +412,7 @@
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
 						<img src="assets/img/logo/black.png" class="logo" alt="Repute">
-<!-- 						<p>The Observer wants to prove that there are no inaccessible places. You will be convinced that this is the electric Power Chair for you.</p>
-						<br>
-						<address class="margin-bottom-30px">
-							<ul class="list-unstyled">
-								<li>1 Infinite Loop
-									<br/> Cupertino, CA 95014</li>
-								<li>Phone: (1800) 765 - 4321</li>
-								<li>Email: contact@observermobility.com</li>
-							</ul> -->
+
 						</address>
 						<!-- END COLUMN 1 -->
 					</div>
@@ -327,14 +450,7 @@
 								<div class="alert"></div>
 							</form>
 						</div>
-<!-- 						<div class="social-connect">
-							<h3 class="footer-heading">GET CONNECTED</h3>
-							<ul class="list-inline social-icons">
-								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="twitter-bg"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-wechat"></i></a></li>
-							</ul>
-						</div> -->
+
 						<!-- END COLUMN 3 -->
 					</div>
 				</div>
@@ -354,6 +470,9 @@
 	<script src="assets/js/plugins/slick/slick.min.js"></script>
 	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
 	<script src="assets/js/repute-scripts.js"></script>
+<!-- Table-Saw script -->
+<script src="assets/js/tablesaw.js"></script>
+<script src="assets/js/tablesaw-init.js"></script>
 	
 </body>
 
