--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -278,19 +278,19 @@
 
             <div class="col-sm-3 col-xs-6">
 <h5>Seat Cover Colors</h5>
+<div class="foo red"></div>
 <div class="foo blue"></div>
-<div class="foo purple"></div>
-<div class="foo wine"></div>
+<div class="foo black"></div>
             </div>
 
             <div class="col-sm-3 col-xs-6">
 <h5>Power Chair Colors</h5>            	
+<div class="foo red"></div>
 <div class="foo blue"></div>
-<div class="foo purple"></div>
-<div class="foo wine"></div>
+<div class="foo black"></div>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+<!--             <div class="col-sm-3 col-xs-6">
 <h5>Lithium or Lead Acid Batteries</h5>   
 <div class="foo blue"></div>
 <div class="foo purple"></div>
@@ -302,7 +302,7 @@
 <div class="foo blue"></div>
 <div class="foo purple"></div>
 <div class="foo wine"></div>
-            </div>
+            </div> -->
 
         </div>
 </div>
@@ -312,31 +312,36 @@
         <!-- Related Projects Row -->
         <div class="row">
 
-            <div class="col-lg-12">
+<!--             <div class="col-lg-12">
                 <h3 class="page-header">Featured Products</h3>
-            </div>
+            </div> -->
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                	<h5>Heavy Duty Off-Road Tires</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                	<h5>Additional Seat</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                	<h5>Additional Device Control</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+                	<h5>Carrier &amp; Seat</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
                 </a>
             </div>
 
