--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -123,7 +123,73 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+               <!--  <img class="img-responsive" src="http://placehold.it/750x500" alt=""> -->
+<div class="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+<!--     <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li> -->
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <div class="carousel-caption">
+<!--         <h3>Cycling</h3>
+        <p>I love my road bike.</p> -->
+      </div>
+    </div>
+
+    <div class="item">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <div class="carousel-caption">
+<!--         <h3>Camping</h3>
+        <p>Can't stay away from the mountains.</p> -->
+      </div>
+    </div>
+
+    <div class="item">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <div class="carousel-caption">
+<!--         <h3>The Super Computer</h3>
+        <p>My development machine.</p> -->
+      </div>
+    </div>
+
+    <div class="item">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <div class="carousel-caption">
+<!--         <h3>Ballin'</h3>
+        <p>Has the NBA Playoffs started yet?</p> -->
+      </div>
+    </div>
+
+    <div class="item">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <div class="carousel-caption">
+<!--         <h3>Photography</h3>
+        <p>The countryside breathes peace into my soul.</p> -->
+      </div>
+    </div>
+  
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>  
+</div>       
             </div>
 
             <div class="col-md-4">
@@ -277,46 +343,6 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-<h5>Seat Cover Colors</h5>
-<div class="foo red"></div>
-<div class="foo blue"></div>
-<div class="foo black"></div>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-<h5>Power Chair Colors</h5>            	
-<div class="foo red"></div>
-<div class="foo blue"></div>
-<div class="foo black"></div>
-            </div>
-
-<!--             <div class="col-sm-3 col-xs-6">
-<h5>Lithium or Lead Acid Batteries</h5>   
-<div class="foo blue"></div>
-<div class="foo purple"></div>
-<div class="foo wine"></div>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-<h5>Ohio State Buckeyes Colors</h5>               	
-<div class="foo blue"></div>
-<div class="foo purple"></div>
-<div class="foo wine"></div>
-            </div> -->
-
-        </div>
-
-        <!-- /.row -->
-
-
-        <!-- Related Projects Row -->
-        <div class="row">
-
-<!--             <div class="col-lg-12">
-                <h3 class="page-header">Featured Products</h3>
-            </div> -->
-
-            <div class="col-sm-3 col-xs-6">
                 <a href="#">
                 	<h5>Heavy Duty Off-Road Tires</h5> 
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
@@ -345,6 +371,78 @@
                 </a>
             </div>
 
+
+
+
+
+<!--             <div class="col-sm-3 col-xs-6">
+<h5>Lithium or Lead Acid Batteries</h5>   
+<div class="foo blue"></div>
+<div class="foo purple"></div>
+<div class="foo wine"></div>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+<h5>Ohio State Buckeyes Colors</h5>               	
+<div class="foo blue"></div>
+<div class="foo purple"></div>
+<div class="foo wine"></div>
+            </div> -->
+
+        </div>
+
+        <!-- /.row -->
+
+
+        <!-- Related Projects Row -->
+        <div class="row">
+
+            <div class="col-sm-3 col-xs-3">
+<h5>Seat Cover Colors</h5>
+<div class="foo red"></div>
+<div class="foo blue"></div>
+<div class="foo black"></div>
+            </div>
+
+            <div class="col-sm-3 col-xs-3">
+<h5>Power Chair Colors</h5>            	
+<div class="foo red"></div>
+<div class="foo blue"></div>
+<div class="foo black"></div>
+            </div>
+<!--             <div class="col-lg-12">
+                <h3 class="page-header">Featured Products</h3>
+            </div> -->
+<!-- 
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                	<h5>Heavy Duty Off-Road Tires</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                	<h5>Additional Seat</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                	<h5>Additional Device Control</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                	<h5>Carrier &amp; Seat</h5> 
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                </a>
+            </div>
+ -->
         </div>
         <!-- /.row -->
 </div>
