powerchairs2.html updated

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 					<div class="item active">
 						<img src="assets/img/P1050072.jpg" class="img-responsive" alt="1200x400 Background Images">
 						<div class="carousel-caption">
-							<h2 class="hero-heading" style="color: #4aaf56;">CRAFTED WITH LOVE</h2>
-							<p class="lead" style="color: white; font-weight: bold;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p>
-							<a href="underconstruction.html" class="btn btn-lg hero-button">LEARN MORE</a>
+<!-- 							<h2 class="hero-heading" style="color: #4aaf56;">CRAFTED WITH LOVE</h2>
+							<p class="lead" style="color: white; font-weight: bold;">Our goal is not to sell wheelchairs – it's to craft them. Everyone who worked on the Observer shares a passion for crafting the best wheelchairs possible.</p> -->
+<!-- 							<a href="underconstruction.html" class="btn btn-lg hero-button">LEARN MORE</a> -->
 						</div>
 					</div>
 					<div class="item">
