--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Observer Maximus 
-                    <small>AWD Power Chair</small>
+                    <small style="color: white;">AWD Power Chair</small>
                 </h1>
             </div>
         </div>
@@ -127,18 +127,17 @@
 <div class="carousel">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
+<!--   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
-<!--     <li data-target="#myCarousel" data-slide-to="3"></li>
-    <li data-target="#myCarousel" data-slide-to="4"></li> -->
-  </ol>
+
+  </ol> -->
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <img class="img-responsive" src="assets/img/powerchairs/maximus1.jpg" alt="Observer Maximus">
       <div class="carousel-caption">
 <!--         <h3>Cycling</h3>
         <p>I love my road bike.</p> -->
@@ -146,7 +145,7 @@
     </div>
 
     <div class="item">
-      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <img class="img-responsive" src="assets/img/powerchairs/maximus2.jpg" alt="Observer Maximus">
       <div class="carousel-caption">
 <!--         <h3>Camping</h3>
         <p>Can't stay away from the mountains.</p> -->
@@ -154,7 +153,7 @@
     </div>
 
     <div class="item">
-      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <img class="img-responsive" src="assets/img/powerchairs/maximus3.jpg" alt="Observer Maximus">
       <div class="carousel-caption">
 <!--         <h3>The Super Computer</h3>
         <p>My development machine.</p> -->
@@ -162,20 +161,20 @@
     </div>
 
     <div class="item">
-      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <img class="img-responsive" src="assets/img/powerchairs/maximus4.png" alt="Observer Maximus">
       <div class="carousel-caption">
 <!--         <h3>Ballin'</h3>
         <p>Has the NBA Playoffs started yet?</p> -->
       </div>
     </div>
 
-    <div class="item">
+<!--     <div class="item">
       <img class="img-responsive" src="http://placehold.it/750x500" alt="">
       <div class="carousel-caption">
-<!--         <h3>Photography</h3>
-        <p>The countryside breathes peace into my soul.</p> -->
+        <h3>Photography</h3>
+        <p>The countryside breathes peace into my soul.</p>
       </div>
-    </div>
+    </div> -->
   
   </div>
 
@@ -191,149 +190,132 @@
 </div>  
 </div>       
             </div>
-
+<div class="container">
+<div class="row">
             <div class="col-md-4">
 <!-- Begin Specs Section -->
 
 <div class="specArea">
-
-<table class="fixed_headers">
-<!--   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-    </tr>
-  </thead> -->
-  <tbody>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Pear</td>
-<!--       <td>Green</td> -->
-      <td>These are green.</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Apple</td>
-      <td>These are red.</td>
-    </tr>
-<!--     <tr>
-      <td>Grape</td>
-      <td>Purple / Green</td>
-      <td>These are purple and green.</td>
-    </tr>
-    <tr>
-      <td>Orange</td>
-      <td>Orange</td>
-      <td>These are orange.</td>
-    </tr>
-    <tr>
-      <td>Banana</td>
-      <td>Yellow</td>
-      <td>These are yellow.</td>
-    </tr>
-    <tr>
-      <td>Kiwi</td>
-      <td>Green</td>
-      <td>These are green.</td>
-    </tr>
-    <tr>
-      <td>Plum</td>
-      <td>Purple</td>
-      <td>These are Purple</td>
-    </tr>
-    <tr>
-      <td>Watermelon</td>
-      <td>Red</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Tomato</td>
-      <td>Red</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Cherry</td>
-      <td>Red</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Cantelope</td>
-      <td>Orange</td>
-      <td>These are orange inside.</td>
-    </tr>
-    <tr>
-      <td>Honeydew</td>
-      <td>Green</td>
-      <td>These are green inside.</td>
-    </tr>
-    <tr>
-      <td>Papaya</td>
-      <td>Green</td>
-      <td>These are green.</td>
-    </tr>
-    <tr>
-      <td>Raspberry</td>
-      <td>Red</td>
-      <td>These are red.</td>
-    </tr>
-    <tr>
-      <td>Blueberry</td>
-      <td>Blue</td>
-      <td>These are blue.</td>
-    </tr>
-    <tr>
-      <td>Mango</td>
-      <td>Orange</td>
-      <td>These are orange.</td>
-    </tr>
-    <tr>
-      <td>Passion Fruit</td>
-      <td>Green</td>
-      <td>These are green.</td>
-    </tr> -->
-  </tbody>
+  <table class="table-fill">
+<thead>
+<tr>
+<th class="text-left">Specs</th>
+<th class="text-left">Description</th>
+</tr>
+</thead>
+<tbody class="table-hover">
+<tr>
+<td class="text-left">Length</td>
+<td class="text-left">1150 mm</td>
+</tr>
+<tr>
+<td class="text-left">Width</td>
+<td class="text-left">730 mm</td>
+</tr>
+<tr>
+<td class="text-left">Height</td>
+<td class="text-left">1370 mm</td>
+</tr>
+<tr>
+<td class="text-left">Wheel Size</td>
+<td class="text-left">400 mm</td>
+</tr>
+<tr>
+<td class="text-left">Seat to floor height</td>
+<td class="text-left">580 mm</td>
+</tr>
+<tr>
+<td class="text-left">Chassis to floor height</td>
+<td class="text-left">150 mm</td>
+</tr>
+<tr>
+<td class="text-left">Weight with batteries</td>
+<td class="text-left">197 kg</td>
+</tr>
+<tr>
+<td class="text-left">Seat</td>
+<td class="text-left">16"/18"/20"</td>
+</tr>
+<tr>
+<td class="text-left">Stair angle (max)</td>
+<td class="text-left">25˚</td>
+</tr>
+<tr>
+<td class="text-left">Slope angle (max)</td>
+<td class="text-left">30˚</td>
+</tr>
+<tr>
+<td class="text-left">Max load capacity</td>
+<td class="text-left">150 kg</td>
+</tr>
+<tr>
+<td class="text-left">Max speed</td>
+<td class="text-left">7.0 km/h</td>
+</tr>
+<tr>
+<td class="text-left">Max output rotate speed</td>
+<td class="text-left">63 rpm</td>
+</tr>
+<tr>
+<td class="text-left">Max mileage (lead-acid)</td>
+<td class="text-left">10-15km</td>
+</tr>
+<tr>
+<td class="text-left">Operation time</td>
+<td class="text-left">1~3 hrs</td>
+</tr>
+<tr>
+<td class="text-left">Brake system</td>
+<td class="text-left">Electromagnetic</td>
+</tr>
+<tr>
+<td class="text-left">Driving motor</td>
+<td class="text-left">2 x 1350 w</td>
+</tr>
+<tr>
+<td class="text-left">Level rack motor</td>
+<td class="text-left">1 x 300 w</td>
+</tr>
+<tr>
+<td class="text-left">Lead-acid battery</td>
+<td class="text-left">4 pcs 12v, 33AH</td>
+</tr>
+<tr>
+<td class="text-left">Lithium Battery</td>
+<td class="text-left">1pc 24v, 80AH</td>
+</tr>
+<tr>
+<td class="text-left">Drive train</td>
+<td class="text-left">4 x 4, AWD</td>
+</tr>
+<tr>
+<td class="text-left">Charging time</td>
+<td class="text-left">5-10 hrs</td>
+</tr>
+</tbody>
 </table>
+
+
 
 </div>
 
 <!-- End Specs Section -->
 
-                <h3>Observer Maximus Description</h3>
+                <h3 style="margin-top: 15px; background-color: #4aaf56; color: white; text-align: center;">Maximus Description</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Observer Maximus Dimensions/Stats</h3>
+<!--                 <h3>Observer Maximus Dimensions/Stats</h3>
                 <ul>
                     <li>Lorem Ipsum</li>
                     <li>Dolor Sit Amet</li>
                     <li>Consectetur</li>
                     <li>Adipiscing Elit</li>
-                </ul>
+                </ul> -->
             </div>
 
         </div>
         <!-- /.row -->
-
+</div>
+</div>
         <!-- Related Projects Row -->
 <div class="addons"> 
         <div class="row">
@@ -342,10 +324,11 @@
                 <h3 class="page-header">Add-on &amp; Options</h3>
             </div>
 
+<div class="stockOptions">
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
                 	<h5>Heavy Duty Off-Road Tires</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                    <img class="img-responsive portfolio-item" src="assets/img/powerchairs/options/1.jpg" alt="">
 
                 </a>
             </div>
@@ -353,25 +336,23 @@
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
                 	<h5>Additional Seat</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                    <img class="img-responsive portfolio-item" src="assets/img/powerchairs/options/2.png" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
                 	<h5>Additional Device Control</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                    <img class="img-responsive portfolio-item" src="assets/img/powerchairs/options/3.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
                 	<h5>Carrier &amp; Seat</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
+                    <img class="img-responsive portfolio-item" src="assets/img/powerchairs/options/4.jpg" alt="">
                 </a>
             </div>
-
-
 
 
 
@@ -389,13 +370,13 @@
 <div class="foo wine"></div>
             </div> -->
 
-        </div>
+        
 
         <!-- /.row -->
 
 
         <!-- Related Projects Row -->
-        <div class="row">
+        <!-- <div class="row"> -->
 
             <div class="col-sm-3 col-xs-3">
 <h5>Seat Cover Colors</h5>
@@ -410,6 +391,8 @@
 <div class="foo blue"></div>
 <div class="foo black"></div>
             </div>
+
+
 <!--             <div class="col-lg-12">
                 <h3 class="page-header">Featured Products</h3>
             </div> -->
@@ -442,9 +425,13 @@
                     <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
                 </a>
             </div>
- -->
+ --></div>
         </div>
         <!-- /.row -->
+</div>
+<!-- End Div class stockOptions -->
+
+
 </div>
 		<!-- END HERO UNIT -->
 </div>
