table framework setup

--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -17,7 +17,7 @@
 	<link href="assets/css/portfolioItem.css" rel="stylesheet">
 	<link href="assets/css/addons.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="assets/css/tablesaw.css">
+	<link rel="stylesheet" href="assets/css/table.css">
 
 
 
@@ -150,14 +150,6 @@
 
       </div>
     </div>
-
-<!--     <div class="item">
-      <img class="img-responsive" src="assets/img/powerchairs/maximus4.png" alt="Observer Maximus">
-      <div class="carousel-caption">
-
-      </div>
-    </div> -->
-  
   </div>
 
   <!-- Left and right controls -->
@@ -177,109 +169,75 @@
 <div class="col-md-4">
                 <h3 style="margin-top: 15px; background-color: #4aaf56; color: white; text-align: center;">Maximus Description</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-<!-- Begin Specs Section -->
-<div class="specArea">
-  <table class="table-fill">
-<thead>
-<tr>
-<th class="text-left">Specs</th>
-<th class="text-left">Description</th>
-</tr>
-</thead>
-<tbody class="table-hover">
-<tr>
-<td class="text-left">Length</td>
-<td class="text-left">1150 mm</td>
-</tr>
-<tr>
-<td class="text-left">Width</td>
-<td class="text-left">730 mm</td>
-</tr>
-<tr>
-<td class="text-left">Height</td>
-<td class="text-left">1370 mm</td>
-</tr>
-<tr>
-<td class="text-left">Wheel Size</td>
-<td class="text-left">400 mm</td>
-</tr>
-<tr>
-<td class="text-left">Seat to floor height</td>
-<td class="text-left">580 mm</td>
-</tr>
-<tr>
-<td class="text-left">Chassis to floor height</td>
-<td class="text-left">150 mm</td>
-</tr>
-<tr>
-<td class="text-left">Weight with batteries</td>
-<td class="text-left">197 kg</td>
-</tr>
-<tr>
-<td class="text-left">Seat</td>
-<td class="text-left">16"/18"/20"</td>
-</tr>
-<tr>
-<td class="text-left">Stair angle (max)</td>
-<td class="text-left">25˚</td>
-</tr>
-<tr>
-<td class="text-left">Slope angle (max)</td>
-<td class="text-left">30˚</td>
-</tr>
-<tr>
-<td class="text-left">Max load capacity</td>
-<td class="text-left">150 kg</td>
-</tr>
-<tr>
-<td class="text-left">Max speed</td>
-<td class="text-left">7.0 km/h</td>
-</tr>
-<tr>
-<td class="text-left">Max output rotate speed</td>
-<td class="text-left">63 rpm</td>
-</tr>
-<tr>
-<td class="text-left">Max mileage (lead-acid)</td>
-<td class="text-left">10-15km</td>
-</tr>
-<tr>
-<td class="text-left">Operation time</td>
-<td class="text-left">1~3 hrs</td>
-</tr>
-<tr>
-<td class="text-left">Brake system</td>
-<td class="text-left">Electromagnetic</td>
-</tr>
-<tr>
-<td class="text-left">Driving motor</td>
-<td class="text-left">2 x 1350 w</td>
-</tr>
-<tr>
-<td class="text-left">Level rack motor</td>
-<td class="text-left">1 x 300 w</td>
-</tr>
-<tr>
-<td class="text-left">Lead-acid battery</td>
-<td class="text-left">4 pcs 12v, 33AH</td>
-</tr>
-<tr>
-<td class="text-left">Lithium Battery</td>
-<td class="text-left">1pc 24v, 80AH</td>
-</tr>
-<tr>
-<td class="text-left">Drive train</td>
-<td class="text-left">4 x 4, AWD</td>
-</tr>
-<tr>
-<td class="text-left">Charging time</td>
-<td class="text-left">5-10 hrs</td>
-</tr>
-</tbody>
-</table>
 
-</div>
-<!-- End Specs Section -->
+<table>
+    <tr>
+        <td>Length</td>
+        <td>Weight with batteries</td>
+        <td>Load Capacity</td>
+        <td>Tire Size</td>
+    </tr>
+    <tr>
+        <td>Width</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Height</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Wheel Size</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Seat to Floor Height</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Chassis to Floor Height</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Weight with Batteries</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Seat</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Seat</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Seat</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+    <tr>
+        <td>Seat</td>
+        <td>item2</td>
+        <td>item1</td>
+        <td>item2</td>
+    </tr>
+</table>
             </div>
         </div>
         <!-- /.row -->
