changed lines 1810 from 25% to 50% and line 1563 from 25% to 45% in bootstrap.css file

--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -161,12 +161,15 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+
 </div>  
 </div>       
             </div>
 <div class="container">
 <div class="row">
 <div class="col-md-4">
+
+
 
 <table>
     <tr>
@@ -237,8 +240,6 @@
     </tr>
 </table>
 
-<h3 style="margin-top: 15px; background-color: #4aaf56; color: white; text-align: center;">Maximus Description</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
 
 
             </div>
@@ -246,7 +247,39 @@
         <!-- /.row -->
 </div>
 </div>
+
+<div class="row">
+<!-- <div class="col-md-12"> -->
+	<div class="colors">
+	            <div class="col-sm-3 col-xs-3 pull-right">
+<h5>Seat Cover Colors</h5>
+<div class="foo red"></div>
+<div class="foo blue"></div>
+<div class="foo black"></div>
+            </div>
+
+            <div class="col-sm-3 col-xs-3 pull-right">
+<h5>Power Chair Colors</h5>            	
+<div class="foo red"></div>
+<div class="foo blue"></div>
+<div class="foo black"></div>
+	<!-- </div> -->
+</div>
+</div>
+
+</div>
         <!-- Related Projects Row -->
+
+<!-- begin description row -->
+<div class="row">
+<div class="col-lg-12">
+	<h3 style="margin-top: 15px; background-color: #4aaf56; color: white; text-align: center;">Description</h3>
+	<div class="productDescription">
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+	</div>
+</div>
+</div>
+<!-- end description row -->        
 <div class="addons"> 
         <div class="row">
 
@@ -290,19 +323,7 @@
         <!-- Related Projects Row -->
         <!-- <div class="row"> -->
 
-            <div class="col-sm-3 col-xs-3">
-<h5>Seat Cover Colors</h5>
-<div class="foo red"></div>
-<div class="foo blue"></div>
-<div class="foo black"></div>
-            </div>
 
-            <div class="col-sm-3 col-xs-3">
-<h5>Power Chair Colors</h5>            	
-<div class="foo red"></div>
-<div class="foo blue"></div>
-<div class="foo black"></div>
-            </div>
 
 </div>
         </div>
