powerchairs2.html changed to email description

--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -250,7 +250,7 @@
 
 <div class="row">
 <!-- <div class="col-md-12"> -->
-	<div class="colors">
+	<div class="colors pull-right">
 	            <div class="col-sm-3 col-xs-3 pull-right">
 <h5>Seat Cover Colors</h5>
 <div class="foo red"></div>
