data table information added

--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -171,72 +171,72 @@
 
 
 
-<table>
+<table style="font-size:11px;">
     <tr>
         <td>Length</td>
-        <td>Weight with batteries</td>
-        <td>Load Capacity</td>
-        <td>Tire Size</td>
+        <td>1150 mm</td>
+        <td>Max speed</td>
+        <td>7.0 km/h</td>
     </tr>
     <tr>
         <td>Width</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>730 mm</td>
+        <td>Max output rotate speed</td>
+        <td>63rpm</td>
     </tr>
     <tr>
         <td>Height</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>1370 mm</td>
+        <td>Max mileage (lead-acid)</td>
+        <td>10-15km</td>
     </tr>
     <tr>
         <td>Wheel Size</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>400 mm</td>
+        <td>Operation time</td>
+        <td>1~3hr</td>
     </tr>
     <tr>
-        <td>Seat to Floor Height</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>Seat to floor height</td>
+        <td>580 mm</td>
+        <td>Brake system</td>
+        <td>Electromagnetic</td>
     </tr>
     <tr>
-        <td>Chassis to Floor Height</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>Chassis to floor height</td>
+        <td>150 mm</td>
+        <td>Driving motor</td>
+        <td>2 x 1350w</td>
     </tr>
     <tr>
-        <td>Weight with Batteries</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
-    </tr>
-    <tr>
-        <td>Seat</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>Weight with batteries</td>
+        <td>197 kg</td>
+        <td>Level rack motor</td>
+        <td>1 x 300w</td>
     </tr>
     <tr>
         <td>Seat</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>16"/18"/20"</td>
+        <td>Lead-Acid battery</td>
+        <td>4pcs 12v, 33AH</td>
     </tr>
     <tr>
-        <td>Seat</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>Stair angle(max)</td>
+        <td>25˚</td>
+        <td>Lithium battery</td>
+        <td>1pc 24v, 80AH</td>
     </tr>
     <tr>
-        <td>Seat</td>
-        <td>item2</td>
-        <td>item1</td>
-        <td>item2</td>
+        <td>Slope angle (max)</td>
+        <td>30˚</td>
+        <td>Drive train</td>
+        <td>4 x 4, AWD</td>
+    </tr>
+    <tr>
+        <td>Max load capacity</td>
+        <td>150kg</td>
+        <td>Charging time</td>
+        <td>5-10 hrs</td>
     </tr>
 </table>
 
