youtube video changed

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 					<div class="col-md-6">
 						<div class="boxed-content">
-<iframe width="350" height="315" src="https://www.youtube.com/embed/rL07V_I7dko" frameborder="0" allowfullscreen></iframe>
+<iframe width="350" height="315" src="https://www.youtube.com/embed/7T6OUjEQjg4?ecver=1" frameborder="0" allowfullscreen></iframe>
 
 							<!-- <i class="fa fa-compass"></i> -->
 							<!-- <h2 class="boxed-content-title">OBSERVER MOBILITY YOUTUBE VIDEO</h2> -->
